# Heart-Disease-Prediction

./: .gitignore  How_To_Run.txt  README.md  pyproject.toml
.virtual_documents/Notebooks/: Heart Disease 20%80%.ipynb  Heart Disease Cross-Validation.ipynb
Data/: Data Column Descriptions.txt
Notebooks/: Heart_Disease_80%20%.ipynb  Heart_Disease_Cross-Validation.ipynb
