[tool.poetry]
name = "heart-disease"
version = "0.1.0"
description = ""
authors = ["Armin <ar.ebrahimif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
jupyterlab-lsp = "^5.2.0"
python-lsp-server = {extras = ["all"], version = "^1.13.0"}
jedi = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
